# llama-cpp-python-serving

./: Dockerfile  Dockerfile.cuda  README.md  llama-cpp-isvc.yaml  llama-cpp-servingruntime.yaml  pyproject.toml  setup-model.yaml
.github/: dependabot.yml
.github/workflows/: build.yml
examples/: inference.py
manifests/: setup-model.yaml
manifests/base/: kustomization.yaml  llama-cpp-isvc.yaml  llama-cpp-servingruntime.yaml
manifests/cpu/: servingruntime.yaml
manifests/gpu/: kustomization.yaml  servingruntime.yaml
manifests/models/mistral-7b-q2k-extra-small/: patches.yaml
manifests/models/mixtral-8x7b-instruct/: kustomization.yaml  patches.yaml
manifests/setup-model-base/: kustomization.yaml  setup-model.yaml
scripts/: deploy.sh  inference_chat.py  inference_simple.sh  load_model.sh  setup_model.sh
utils/: server_cert.py
